# swot-surf

./: .gitignore  README.md  pyproject.toml
notebooks/: swot_example.ipynb
src/util/: coordinate_transforms.py  plotting_helpers.py
